<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_7"
    tools:context=".bebida">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="130dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp"
        android:textSize="20dp">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt4"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:gravity="center"/>


        <Button
            android:id="@+id/CP"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn9"
            android:textSize="25dp" />

        <Button
            android:id="@+id/MaB"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:text="@string/btn10"
            android:textSize="25dp" />
        <Button
            android:id="@+id/M"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn12"
            android:textSize="25dp" />
        <Button
            android:id="@+id/regreso2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:textSize="25dp"
            android:text="@string/btns2"
            />
    </LinearLayout>

</RelativeLayout>