<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/img_4"
    android:layout_height="match_parent"
    tools:context=".pizza">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp"
        android:textSize="20dp">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/txt4"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:gravity="center"/>

    <Button
        android:id="@+id/FP"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn7"
        android:background="#FF5722"
        android:textSize="25dp" />

        <Button
            android:id="@+id/RN"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:text="@string/btn8"
            android:background="#FF5722"
            android:textSize="25dp" />
        <Button
            android:id="@+id/P"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:text="@string/btn11"
            android:background="#FF5722"
            android:textSize="25dp" />
        <Button
            android:id="@+id/regreso"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:background="#FF5722"
            android:textSize="25dp"
            android:text="@string/btns1"
            />
    </LinearLayout>
</RelativeLayout>