<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE3DA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_marginTop="0dp"
        android:textSize="40dp"
        android:gravity="center"
        android:background="#FF5722"
        android:textColor="#fff"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:layout_marginTop="100dp"
        android:textSize="30dp"
        android:textColor="#9A050202"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_below="@+id/text1"
        android:layout_gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="300dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:textSize="25dp">
        <Button
            android:id="@+id/iniciar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:background="#FF5722"
            android:text="@string/btn1" />
        <Button
            android:id="@+id/salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#FF5722"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:text="@string/btn2"
            />

    </LinearLayout>

</RelativeLayout>
